--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "roman-numerals",
   "version": "1.0.0",
   "scripts": {
+    "start": "nodemon src/api.js",
     "test": "jest"
   },
   "devDependencies": {
