managing errors - stringify

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "roman-numerals",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon src/parse.js",
+    "start": "nodemon src/stringify.js",
     "test": "jest"
   },
   "devDependencies": {
