parse, string and cli ready

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "roman-numerals-thainole",
+  "name": "roman-numerals-tn",
   "version": "1.0.0",
+  "description": "NodeJs library about roman numerals conversion",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "jest"
+    "test": "jest --verbose --coverage",
+    "eslint": "eslint --ext .js",
+    "pretest": "npm run eslint"
   },
   "repository": {
     "type": "git",
